# filesync

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  client.c  file_io.h  file_tools.c  file_tools.h  file_walk.c  file_walk.h  makefile  server.c
old/: net_socket.c  net_socket.h
src/daemon/: daemon.c
src/include/: binary_search_tree.h  error.h  file_io.h  file_walk.h  free_list.h  lru_cache.h  memory_block.h  memory_layout_generator.h  net_socket.h  old_thread_safe_slab.h  thread_message.h  thread_safe_queue.h  thread_safe_slab.h
src/modules/: binary_search_tree.c  error.c  file_io.c  file_walk.c  free_list.c  lru_cache.c  memory_block.c  memory_layout_generator.c  net_socket.c  old_thread_safe_slab.c  slab_allocator.c  thread_message.c  thread_safe_queue.c  thread_safe_slab.c
src/server/: server.c
src/test/: test.c
